k8s/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-webapp
  labels:
    app: backend
    project: demo
    tier: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
      tier: api
  template:
    metadata:
      labels:
        app: backend
        tier: api
    spec:
      containers:
      - name: ts-example
        image: dukecyber/ts-example:dev-v1.0
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          failureThreshold: 1
          periodSeconds: 10
