k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: demo-webapp-svc
  annotations: {}
  labels:
    app: backend
    project: demo
    tier: api
spec:
  type: ClusterIP # Select each of ClusterIP, LoadBalancer, NodePort or ExternalName
  selector:
    app: backend
    tier: api
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP # UDP
    name: webhttp
