k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-webapp-ing
  labels:
    app: backend
    project: demo
    tier: api
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: demo-webapp-svc
            port:
              number: 80
